# cortex

./: .gitignore  Dockerfile  README.md  announce-test.sh  bootstrap-run.sh  docker-compose.yml  install.sh  light-run.sh  run.sh  uninstall.sh
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/api_interface/: mod.rs
core/src/communicator/: mod.rs
core/src/discovery/: mod.rs
core/src/identity/: mod.rs
core/src/registry/: mod.rs
cortex-core/: run.sh
cortex-core/docker/: Dockerfile  docker-compose.yml
cortex-core/rust/cortex-id/: Cargo.toml
cortex-core/rust/cortex-id/src/: lib.rs  main.rs
cortex-core/rust/cortex-id/src/discovery/: mod.rs
cortex-core/rust/cortex-id/src/identity/: mod.rs
cortex-core/rust/cortex-id/src/registry/: mod.rs
cortex-id/: Cargo.toml  README.md
cortex-id/src/: lib.rs  main.rs
orchestation/: go.mod
