[package]
name = "cortex-id"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1.36", features = ["full"] }
libp2p = { version = "0.53", features = ["full", "ed25519"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde_json = "1"
base64 = "0.21"
dirs = "5.0"
tokio-stream = "0.1"
anyhow = "1"
futures = "0.3"

[lib]
name = "cortex_id"
path = "src/lib.rs"

[[bin]]
name = "cortex-id"
path = "src/main.rs"
